# Airgame-Console

./: CMakeLists.txt  CoreFunctions.h  Firebase.h  FuncAPI.qml  GameListController.h  LoginAPI.qml  Main.qml  ModelItem.qml  MyFboItem.cpp  MyFboItem.h  PersonAPI.qml  QtVideoRenderer.cpp  QtVideoRenderer.h  README.md  StreamAPI.qml  TitleAPI.qml  WebRtcClient.cpp  WebRtcClient.h  main.cpp  oauth2.h
native/: TitleFunctions.cpp  oauth2_live.cpp
qml/components/: ColorImage.qml  Cross.qml  CustomText.qml  IconText.qml  RoundedObject.qml  VideoImage.qml
qml/menu/: LeftMenu.qml  MainMenuDetail.qml  MainMenuList.qml  TopMenu.qml
qml/popups/: GamePlayer.qml  Login.qml  Login.qml.bak
resources/ssl/: localhost-certificate.pem  localhost-privatekey.pem
src/webrtc/: WebRtcSmokeTest.cpp
